update captcha to compact. fix spacing on filter. Add done button

--- a/src/components/filterSearchDrawer.module.css
+++ b/src/components/filterSearchDrawer.module.css
@@ -25,5 +25,11 @@
 }
 
 .button {
-  margin: 0 0.5rem;
+  margin: 0 0.025rem;
+}
+
+@media (max-width: 470px) {
+  .button {
+    margin: 0 0.5rem;
+  }
 }
